--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -108,7 +108,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 99999;
+  z-index: 2147483647;
 }
 
 .login-modal {
@@ -118,7 +118,7 @@
   width: 90%;
   max-width: 400px;
   position: relative;
-  z-index: 100000;
+  z-index: 2147483647;
 }
 
 .login-options {
