--- a/src/styles/SecuritySettings.css
+++ b/src/styles/SecuritySettings.css
@@ -25,3 +25,13 @@
   color: #666;
   margin-top: 4px;
 }
+
+.wallet-info a {
+  color: #0066cc;
+  text-decoration: none;
+  margin-left: 5px;
+}
+
+.wallet-info a:hover {
+  text-decoration: underline;
+}
