--- a/src/styles/Track.css
+++ b/src/styles/Track.css
@@ -143,7 +143,14 @@
     padding-top: 0;
   }
 
-
+  .map-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+  }
 
   .leaflet-container {
     width: 100%;
